feat: scene model